<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.imagine.go.view.IconEditText
        android:id="@+id/id_editText_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="15dp"
        android:alpha="0.8"
        android:background="@drawable/shaper_searchbar_rect"
        android:completionThreshold="2"
        android:drawableEnd="@drawable/ic_searchbar_voice"
        android:drawableLeft="@drawable/ic_searchbar_magnifier"
        android:drawablePadding="5dp"
        android:drawableRight="@drawable/ic_searchbar_voice"
        android:drawableStart="@drawable/ic_searchbar_magnifier"
        android:dropDownSelector="@color/black"
        android:dropDownVerticalOffset="1dp"
        android:elevation="5dp"
        android:hint="@string/hint_search_offlinemap"
        android:inputType="text|textAutoComplete"
        android:paddingBottom="6dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:paddingTop="6dp"
        android:popupBackground="@drawable/shaper_searbar_dropdown_listvivew"
        android:singleLine="true"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/id_textView_hotRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id_editText_search"
        android:layout_alignStart="@+id/id_editText_search"
        android:layout_below="@+id/id_editText_search"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="8dp"
        android:text="@string/hot_region"
        android:textColor="@color/offlinemap_hint_text"
        android:textSize="13sp" />

    <ListView
        android:id="@+id/id_listView_hotRegion"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/id_textView_hotRegion"
        android:divider="@null"
        android:scrollbars="none"
        android:stretchMode="columnWidth" />

    <TextView
        android:id="@+id/id_textView_allCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id_editText_search"
        android:layout_alignStart="@+id/id_editText_search"
        android:layout_below="@+id/id_listView_hotRegion"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/all_region"
        android:textColor="@color/offlinemap_hint_text"
        android:textSize="13sp" />

    <ExpandableListView
        android:id="@+id/id_elistView_allCity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/id_textView_allCity"
        android:listSelector="@null"
        android:scrollbars="none"
        android:stretchMode="columnWidth" />

    <FrameLayout
        android:id="@+id/id_layout_relatedCity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/id_editText_search"
        android:background="@color/app_backgourd"
        android:visibility="gone" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/id_textView_relatedCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="22dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:text="@string/related_city"
                android:textColor="@color/offlinemap_hint_text"
                android:textSize="13sp" >
            </TextView>

            <ListView
                android:id="@+id/id_listView_relatedCity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/id_textView_relatedCity"
                android:divider="@null"
                android:scrollbars="none"
                android:stretchMode="columnWidth" />
        </RelativeLayout>
    </FrameLayout>

</RelativeLayout>